name:                htmlcat
version:             0.1.1
homepage:            https://github.com/maoe/htmlcat
license:             BSD3
license-file:        LICENSE
author:              Mitsutoshi Aoe
maintainer:          Mitsutoshi Aoe <maoe@foldr.in>
category:            System
build-type:          Simple
cabal-version:       >=1.2

flag snap
  default:           False

executable htmlcat
  main-is:           Main.hs
  other-modules:     HtmlCat.Html
  ghc-options:       -Wall -O2

  build-depends:     base >= 4
                   , blaze-builder == 0.4.*
                   , blaze-html == 0.9.*
                   , cmdargs == 0.*
                   , mtl >= 2 && < 3
                   , network == 2.8.*
                   , process == 1.6.*
                   , shakespeare == 2.0.*
                   , text == 1.2.*
  if flag (snap)
    other-modules:   HtmlCat.Snap
                     Snap.EventSource
    ghc-options:     -fspec-constr-count=10
    cpp-options:     -DSNAP
    build-depends:   bytestring == 0.9.*
                   , enumerator >= 0.4.18 && < 0.5
                   , snap-core == 0.7.*
                   , snap-server == 0.7.*
  else
    other-modules:   HtmlCat.Wai
    build-depends:   conduit == 1.3.*
                   , conduit-extra == 1.3.*
                   , http-types == 0.*
                   , wai == 3.0.*
                   , wai-extra == 3.0.*
                   , warp == 3.*

source-repository head
  type:              git
  location:          https://github.com/maoe/htmlcat.git
